# hs-app-toolkit

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml
Athletics/: AthleticNetTrackField.py  MaxPrepRosterScraper.py  __init__.py
docs/: northside-modules.md  school-template.md
example/: main.py
hs_scraper_toolkit/: __init__.py
