[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hs-scraper-toolkit"
version = "1.0.0"
description = "A comprehensive toolkit for scraping high school sports data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["scraping", "sports", "high school", "athletics", "maxpreps"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/hs-scraper-toolkit"
Documentation = "https://github.com/yourusername/hs-scraper-toolkit#readme"
Repository = "https://github.com/yourusername/hs-scraper-toolkit"
"Bug Tracker" = "https://github.com/yourusername/hs-scraper-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["Athletics*"]
exclude = ["tests*", "example*"]
